<resources>
    <string name="app_name">Accord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="accord_logo">accord_logo</string>
    <string name="accord">Accord</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="ipAddress">IP: 192.168.188.42</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_as_temp_user">Login as Temp-User</string>
    <string name="userKey">userKey</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="serverName">serverName</string>
    <string name="lastMessage">LastMessage</string>
    <string name="sendMessage">sendMessage</string>
    <string name="template_time_message">15:36</string>
    <string name="receiveMessage">receiveMessage</string>
    <string name="send">Send</string>
    <string name="enter_message">Message...</string>
    <string name="categoryName">CategoryName</string>
    <string name="channelName">🖊️ ChannelName</string>
    <string name="plusSymbol">+</string>
</resources>