<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainLayoutColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="635dp"
                android:background="@color/mainLayoutColor"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/button_Home"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/logout_button"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.98" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_server"
                        android:layout_width="match_parent"
                        android:layout_height="249dp"
                        android:choiceMode="singleChoice"
                        app:layout_constraintEnd_toStartOf="@+id/rv_privateChats"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_privateChats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    app:layout_constraintBottom_toBottomOf="@+id/rv_server"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mainLayoutColor"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_logout"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logout_button"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.083"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.915"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.347" />

                <TextView
                    android:id="@+id/text_userKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userKey"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.824"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.707" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</com.google.android.material.navigation.NavigationView>

<com.google.android.material.navigation.NavigationView
android:fitsSystemWindows="true"
android:id="@+id/nav_view_right"
android:layout_gravity="right"
android:layout_height="match_parent"
android:layout_width="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/mainLayoutColor"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:choiceMode="singleChoice"
        android:id="@+id/rv_onlineUser"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.navigation.NavigationView></androidx.drawerlayout.widget.DrawerLayout>